--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -1,8 +1,8 @@
-# Datu-egiturak
+# Datu egiturak
 
-Orain arte datu sinpleekin, zenbaki bat, testu bat eta abar duten aldagaiekin jolasten aritu gara. Baina badira datu konplexuagoak sortzeko aukera ematen diguten beste mota batzuk ere. Ez dira zailak, zenbaki soil bat baino zerbait gehiago eduki dezakete.
+Orain arte datu sinpleekin, zenbaki bat, testu bat eta abar duten aldagaiekin jolasten aritu gara. Baina badira datu konplexuagoak sortzeko aukera ematen diguten beste datu mota batzuk ere: datu soil bat baino zerbait gehiago eduki dezakete.
 
-Ordenagailu-programek oso gauza zailak egin ditzakete, baina, funtsean, datuak prozesatzen dituzte. Eta askotan, datu horiek sekuentzia luzeetan datoz. Jarraian, datu mota horietako batzuk ikusiko ditugu.
+Ordenagailu programek oso gauza zailak egin ditzakete, baina, funtsean, datuak prozesatzen dituzte. Eta askotan, datu horiek sekuentzia luzeetan datoz. Jarraian, datu mota horietako batzuk ikusiko ditugu.
 
 ## Zerrendak
 
@@ -12,14 +12,14 @@ Zerrendak zenbakiz indexatutako datu-multzo bat dira. Hori da definizio oso form
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 ```
 
-Gogoratu aurkibide baten bidez eskura ditzakezula elementuak:
+Gogoratu, zenbaki edo indize baten bidez eskura ditzakezula elementuak:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 print (hizkuntzak [2]) #Frantsesa
 ```
 
-Zerrenda honela adieraz daiteke:
+Zerrenda honela errepresentatu daiteke:
 
 | 0 | 1 | 2 |
 | -- | -- | -- |
@@ -42,7 +42,16 @@ Emaitza:
 ["Ada", "Bug", "Neko"]
 ```
 
-3.1 ariketa
+## Zerrenden luzera
+
+Zerrenda baten luzera jakiteko, `len ()` funtzioa erabil daiteke:
+
+```python
+hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
+print (len (hizkuntzak)) # 3
+```
+
+3.1 Ariketa
 
 Sortu programa bat 5 zenbaki hamartarrekin definitzeko. Gero, sortu begizta bat zenbaki guztien batez bestekoa kalkulatzeko.
 
@@ -78,21 +87,21 @@ Lehen elementuak ere atera daitezke:
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-[: 6] # [1, 2, 3, 4, 5, 6] zenbakiak
+zenbakiak[: 6] # [1, 2, 3, 4, 5, 6] zenbakiak
 ```
 
 Edo azken balioak
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-[-4:] # [6, 7, 8, 9] zenbakiak
+zenbakiak[-4:] # [6, 7, 8, 9] zenbakiak
 ```
 
 Edo, besterik gabe, azkena:
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9]
-[-1] zenbakiak # [9]
+zenbakiak[-1] zenbakiak # [9]
 ```
 
 ## Elementuak gehitu eta ezabatu
@@ -105,12 +114,21 @@ idiomas.append ("Italiera")
 print (hizkuntzak) # ["Ingelesa", "Gaztelania", "Frantsesa", "Italiera"]
 ```
 
-Eta elementu bat zerrendatik kendu nahi badugu, `l 'agindua erabil daiteke:
+Eta elementu bat zerrendatik kendu nahi badugu, `del` agindua erabil daiteke:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
-hizkuntza [1]
+del hizkuntza[1]
 print (hizkuntzak) # ["Ingelesa", "Frantsesa"]
+```
+
+Azken elementoa kentzeko, `pop` funtzioa ere erabil daiteke. Honek elementua kentzen du eta itzultzen du:
+
+```python
+hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
+azkena = hizkuntzak.pop()
+print(hizkuntzak) # ["Ingelesa", "Gaztelania"]
+print(azkena) # "Frantsesa"
 ```
 
 Eta zerrendako elementu baten balioa ere alda daiteke:
@@ -125,10 +143,10 @@ Eta gogoratu, zerrendan zehar joateko, begizta hau erabil dezakegu:
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 for hizkuntza in hizkuntzak:
-print (hizkuntza)
+    print (hizkuntza)
 ```
 
-Aurkibidea erabiliz ere egin daiteke zerrenda. Horretarako, `range` funtzioa erabili beharko dugu, eta zerrendaren luzera eman beharko diogu, `lena' erabiliz:
+Indizea erabiliz ere egin daiteke zerrenda. Horretarako, `range` funtzioa erabili beharko dugu, eta zerrendaren luzera eman beharko diogu, `len' erabiliz:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
@@ -138,10 +156,9 @@ for i in range (len (hizkuntzak)):
 
 Dena den, indizea begiztaren barruan behar ez bada, hobe da zerrenda indizerik gabe egitea, aurreko adibidean egiten den bezala.
 
-Beste hizkuntza batzuetan, zerrendei "array" esaten zaie.
-Ezagutu beharko zenituzke, baina berriro gogoratuko dizugu.
+Beste lengoai batzuetan, zerrendei `array` esaten zaie. Testuan zehar hitz desberdinak erabiliko ditugu.
 
-3.2 ariketa
+3.2 Ariketa
 
 Definitu izenen zerrenda bat, erakutsi pantaila bidez. Gehitu elementu bat eta erakutsi zerrenda pantailaz pantaila. Ondoren, zerrendatik elementu bat ezabatu eta zerrenda pantailaz pantaila erakusten du.
 
@@ -169,7 +186,7 @@ Emaitza:
 
 ## Hiztegiak
 
-Hiztegiak datu-multzoak dira, eta elementu bakoitzak gako bat eta balio bat ditu.
+Hiztegiak datu-multzoak dira, non elementu bakoitzak gako bat eta balio bat ditu.
 Beste era batera esanda, zerrenda bat bezalakoak dira, baina 0,1, 2... zenbaki-indizea izan beharrean, zuk nahi duzun balioa dute.
 
 Adibidez, hiztegi bat defini dezakegu, hainbat pertsonaren adinak biltzen dituena, non izena baita gakoa eta adina balioa:
@@ -186,9 +203,9 @@ Hiztegia honela adieraz daiteke:
 | 14 | 10 | 2 |
 
 
-3.3 ariketa
+3.3 Ariketa
 
-Defini ezazu telefonoak izeneko hiztegi bat, non lagun pare baten telefonoak gordeko dituzun. Gakoa lagunaren izena izango da, eta balioa, berriz, telefono-zenbakia.
+Defini ezazu `telefonoak` izeneko hiztegi bat, non lagun pare baten telefonoak gordeko dituzun. Gakoa lagunaren izena izango da, eta balioa, berriz, telefono zenbakia.
 
 ```python
 telefonoak = {"Ada": 666555333, "Bug": 111000111 }
@@ -202,12 +219,12 @@ for izena in telefonoak.keys():
 Emaitza:
 
 ```console
-Bug: 111000111, 'Ada': 666555333}
+{Bug: 111000111, 'Ada': 666555333}
 Bug 111000111
 Ada 66555333
 ```
 
-Elementu berriak gehitzeko, balio berri bat esleitu daiteke:
+Elementu berriak gehitzeko, balio berri bat esleitu daiteke. Ezabatzeko, `del` agindua erabiltzen da:
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
@@ -218,7 +235,7 @@ adinak ["Miranda"] = 23;
 
 print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14, 'Miranda': 23}
 
-["Bug"]
+del adinak["Bug"]
 
 print (adinak) # {'Neko': 2, 'Ada': 14, 'Miranda': 23}
 
@@ -226,11 +243,11 @@ for izena in edades.keys ():
   print (izena, adinak[izena])
 ```
 
-3.4 ariketa
+3.4 Ariketa
 
-Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari datuak hiztegian beste sarrera bat sartzeko: izena eta telefonoa eskatu beharko dituzu, eta gero hiztegira gehitu.
+Erabili aurreko ataleko telefonoen hiztegia. Eskatu erabiltzaileari datuak hiztegian beste sarrera bat sartzeko: izena eta telefonoa eskatu beharko dituzu, eta gero hiztegira gehitu.
 
-Amaieran, hiztegiko elementu guztiak erakusten ditu.
+Amaieran, hiztegiko elementu guztiak erakutsi.
 
 ```python
 telefonoak = {"Ada": 666555333, "Bug": 111000111}
@@ -265,7 +282,7 @@ print (adinak) # {'Neko': 2, 'Ada': 14}
 ```
 
 Eta hiztegiko balio guztiak ezagutu nahi baditugu?
-Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat erabili beharko dugu: `keys () ". Honela litzateke:
+Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat erabili beharko dugu: `keys ()`. Honela litzateke:
 
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
@@ -277,24 +294,24 @@ Pantailaren arabera:
 
 ```console
 Ada 14
-10. bug.
+Bug 10
 Neko 2
 ```
 
-3.5 ariketa
+3.5 Ariketa
 
-Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari izen bat, eta gero kendu elementu hori hiztegitik.
+Erabili aurreko ataleko telefonoen hiztegia. Eskatu erabiltzaileari izen bat, eta gero kendu elementu hori hiztegitik.
 Amaieran, hiztegiko elementu guztiak erakusten ditu.
 
 ```python
-telefonoak = {"Ada": 66555333, "Bug": 111000111}
+telefonoak = {"Ada": 666555333, "Bug": 111000111 }
 
-izena = input ("Sartu izen bat:")
+izena = input("Sartu izena: ")
 
-telefonoak [izena]
+del telefonoak[izena]
 
-for izena in telefonos.keys ():
-  print (izena, telefonoak[izena])
+for izena in telefonoak.keys():
+    print(izena, telefonoak[izena])
 ```
 
 Emaitza:
@@ -305,19 +322,19 @@ Ada 66555333
 ```
 
 Oharra:
-Beste hizkuntza batzuetan, hiztegiei `hash 'edo `hashtables' esaten zaie.
+Beste hizkuntza batzuetan, hiztegiei `hash`, `hashtable` edo "mapak" esaten zaie.
 
 ## Datu konbinatuen egiturak
 
 Oinarrizko egiturek, hala nola zerrendek eta hiztegiek, zerrendak eta hiztegiak ere izan ditzakete!
 
-Datu-egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun baten datuak hiztegi honekin irudikatu nahi dituzula:
+Datu egitura habiatuak sor daitezke, behar bezain konplexuak. Demagun lagun baten datuak hiztegi honekin irudikatu nahi dituzula:
 
 ```python
 laguna = {"izena": "Neko", "adina": 2}
 ```
 
-Eta hainbat lagun izango dituen datu-egitura bat izan nahi baduzu? Kasu horretan, hiztegien zerrenda egin dezakezu:
+Eta hainbat lagun izango dituen datu egitura bat izan nahi baduzu? Kasu horretan, hiztegien zerrenda egin dezakezu:
 
 ```python
 lagunak = [
@@ -329,7 +346,7 @@ print (lagunak [1]) # {"izena": "Bug", "adina": 10}
 print (lagunak [2] ["izena"]) #Ada
 ```
 
-3.6 ariketa
+3.6 Ariketa
 
 Idatzi bezeroa izeneko hiztegi-zerrenda bat zehazten duen programa bat, gakoak dituena: izena, emaila eta adina. Programak zerrenda egin behar du eta bezero bakoitzaren izena eta adina erakutsi.
 
@@ -376,16 +393,16 @@ pantaila = {
 print (pantaila ["Luigi"] ["bizitza"]) # 7
 ```
 
-Baina nola dakit zer egitura mota diseinatu behar dudan? Nola erabiliko duzun. Batzuetan denak ibili beharko dituzu, beste batzuetan elementu jakin bat eskuratu beharko duzu... zure programak eskatzen duenaren arabera, egitura jakin bat diseinatu beharko duzu.
+Baina nola dakit zer egitura mota diseinatu behar dudan? Nola erabiliko duzun arabera. Batzuetan denak ibili beharko dituzu, beste batzuetan elementu jakin bat eskuratu beharko duzu... zure programak eskatzen duenaren arabera, egitura jakin bat diseinatu beharko duzu, zure programa azkarrago joan dadin.
 
 # Testuak
 
-Testu-datu mota, katea edo *string* ere deitua, funtsezkoa da programetan. Horregatik, erabilgarritasun asko ditu datu mota horiek errazago erabiltzeko.
+Testu datu mota, katea edo *string* ere deitua, funtsezkoa da programetan. Horregatik, erabilgarritasun asko ditu datu mota horiek errazago erabiltzeko.
 Jarraian, testuetarako baliagarriak diren zenbait funtzio ikusiko ditugu, baina, aurretik, testuari buruzko zerbait azaltzea komeni da:
 
 ## Testuak zerrendak dira
 
-Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra-zerrenda edo -katea, eta honela tratatu dezakegu:
+Izan ere, ordenagailuarentzat, testu bat zerrenda bat bezalakoa da. Letra zerrenda (edo katea) honela tratatu dezakegu:
 
 ```python
 testua = "Kaixo naiz Ada"
@@ -398,7 +415,7 @@ Testua zerrenda bat balitz bezala ere ibil dezakegu:
 testua = "Ada"
 
 for caracter in texto:
-print (karaktere)
+    print (karaktere)
 ```
 
 Irteera hau izango litzateke:
@@ -409,40 +426,40 @@ d
 a
 ```
 
-Testu baten luzera ere jakin dezakegu, `len ()» funtzioarekin:
+Testu baten luzera ere jakin dezakegu, `len ()` funtzioarekin:
 
 ```python
-testua = "Neko maulla"
+testua = "Neko miauka"
 len (testua) # 11
 ```
 
 Baina zalantzarik izanez gero, interesgarriena da testutik nahi dugun zatia atera dezakegula, hasiera eta amaiera adierazita:
 
 ```python
-testua = "Python mola"
+testua = "Python gora"
 testua [0:6] # "Python"
-testua [7:12] # "mola"
+testua [7:12] # "gora"
 ```
 
 Lehen karaktereak ere atera daitezke
 
 ```python
-testua = "Python mola"
-testua [: 6] # "Python"
+testua = "Python gora"
+testua [:6] # "Python"
 ```
 
 Edo azken karaktereak
 
 ```python
-testua = "Python mola"
-testua [-4:] # "mola"
+testua = "Python gora"
+testua [-4:] # "gora"
 ```
 
 Edo, besterik gabe, azkena:
 
 ```python
-testua = "Python mola"
-[-1] # "a" testua
+testua = "Python gora"
+testua[-1] # "a" testua
 ```
 
 ## Letra larriak/Letra xeheak
@@ -451,11 +468,11 @@ Zenbait funtzio ditugu testua letra larriz edo xehez idazteko:
 
 ```python
 testua = "Irakasle Ada"
-testu.upper () #IRAKASLE ADA
-testu.lower () #Irakasle Ada
+testu.upper() #IRAKASLE ADA
+testu.lower() #Irakasle Ada
 ```
 
-"Title ()" izeneko funtzio bat ere badugu, hitz bakoitza testu baten barruan aldatzen duena, lehen letra letra letra larriz jarriz.
+`title()` izeneko funtzio bat ere badugu, hitz bakoitza testu baten barruan aldatzen duena, lehen letra larriz jarriz.
 
 ```python
 testua = "hau esaldi bat da"
@@ -464,14 +481,14 @@ texto.title () #Hau Esaldi bat da
 
 ## split: testutik zerrendara
 
-split funtzio interesgarria da testu bat zatika zatitzea eta zerrenda bihurtzea:
+`split` funtzio interesgarria da testu bat zatika banatzeko eta zerrendan bihurtzeko:
 
 ```python
 testua = "zatoz nirekin, bizi nahi baduzu"
 hitzak = testua.split () # ["zatoz", "nirekin", "bai", "nahi duzu", "bizi"]
 ```
 
-Besterik ezean, splita testuaren espazioetan mozten da. Baina beste edozein bereizle adieraz daiteke, adibidez:
+Besterik ezean, `split` operazioa testuaren hutsuneetan mozten da. Baina beste edozein bereizle adieraz daiteke, adibidez:
 
 ```python
 testua = "Ada; Neko; Bug"
@@ -480,7 +497,7 @@ izenak = testua.split (";") # [Ada "," Neko "," Bug "]
 
 ## Bilaketak
 
-Batzuetan, testu baten barruan hitz bat bilatzea gustatuko zaigu. Horretarako, find funtzioa erabil dezakegu. Hitza aurkituz gero, hitz hori zein posiziotan hasten den erakutsiko du. Aurkitzen ez baduzu, itzuli `-1.
+Batzuetan, testu baten barruan hitz bat bilatu behar dugu. Horretarako, `find` funtzioa erabil dezakegu. Hitza aurkituz gero, hitz hori zein posiziotan hasten den erakutsiko du. Aurkitzen ez badu, `-1` itzuliko du.
 
 ```python
 hitzak = "Irakaslerik onena Ada da, zalantzarik gabe"
@@ -489,15 +506,15 @@ aurkitu = hitza.find ("Ada") # 22
 EzAurkitua = hitza.find ("xxx") # -1
 ```
 
-Testu bat nolabait hasten den jakin nahi badugu, `startswith ()» erabil daiteke.
+Testu bat nolabait hasten den jakin nahi badugu, `startswith()` erabil daiteke.
 
 ```python
 hitzak = "Python lengoaia ona da"
-hasi = hitza.startswith ("Py") #True
-hasi = hitza.startswith ("es") #False
+hasi = hitzak.startswith ("Py") #True
+hasi = hitzak.startswith ("es") #False
 ```
 
-Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith ()» erabil daiteke:
+Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith()` erabil daiteke:
 
 ```python
 hitzak = "Python lengoaia ona da"
@@ -507,23 +524,23 @@ acaba = palabra .startswith ("ajes") #False
 
 ## Soberakinak ezabatu
 
-Testuak zuriuneekin edo ezabatu nahi ditugun beste karaktere batzuekin has edo buka daitezke, esaterako, lerro-jauziekin. Testu batetik soberan dauden zati horiek kentzeko, honako funtzio hauek erabil daitezke.
+Testuak zuriuneekin edo ezabatu nahi ditugun beste karaktere batzuekin has edo buka daitezke, esaterako, hutsune edo lerro jauziekin. Testu batetik soberan dauden zati horiek kentzeko, honako funtzio hauek erabil daitezke.
 
-lstrip () -ekin, testuaren hasieran espazioak ezabatzen dira:
+`lstrip`ekin, testuaren hasieran espazioak ezabatzen dira:
 
 ```python
 testua = "Espazioak ditut"
 garbia = testua.lstrip () # "Espazioak ditut"
 ```
 
-"rstrip ()" delakoarekin, testuaren hasieran espazioak ezabatzen dira:
+`rstrip` delakoarekin, testuaren hasieran espazioak ezabatzen dira:
 
 ```python
 testua = "Espazioak ditut"
 garbia = testua.rstrip () # "Espazioak ditut"
 ```
 
-Eta strip () delakoarekin bi aldeetako espazioak kenduko ditugu:
+Eta `strip` funtzioarekin bi aldeetako espazioak kenduko ditugu:
 
 ```python
 testua = "Espazioak ditut"
@@ -533,27 +550,30 @@ garbia = testua.strip () # "Espazioak ditut"
 Besterik ezean, espazioak kentzen dira, baina kendu nahi dugun edozein testu adieraz dezakegu:
 
 ```python
-testua = "--Arloi-testua"
-garbia = testua.lstrip ("-") # "Testua gidoiarekin"
+testua = "--Testua-gidoiarekin---"
+garbia = testua.lstrip ("-") # "Testua-gidoiarekin---"
 ```
 
-Fitxategi batetik edo kontsolatik testua irakurtzen dugunean ere, lerro-jauziak egiten ditugu:
+Fitxategi batetik edo kontsolatik testua irakurtzen dugunean ere, lerro jauziak kentzeko `rstrip` funtzioa erabil daiteke:
 
 ```python
 testua = "Honek lerro-jauzi bat du\n"
-garbia = testua.rstrip ("\n")
+garbia = testua.rstrip("\n")
 ```
 
 ## Proposatutako ariketak
 
-3.0 ariketa
+3.0 Ariketa
 
-Idatz ezazu 5 zenbakiko zerrenda bat hasten duen programa bat (0ra hasitakoak), eskuz hasitako 5 izeneko beste bat eta 5 boolear balioko beste bat (false erara hasitakoak)
+Idatz ezazu 5 elementuko zerrenda bat hasten duen programa bat:
+- Zenbaki zerrenada (0ra hasitakoak).
+- Eskuz hasitako 5 izeneko zerrenda.
+- 5 boolear balioko beste bat (`True` balioarekin hasitakoak).
 
 ```python
-izenak = ["Frodo", "Sam", "Merrin", "Pippin"]
-logikoak = [True]*5
-zenbakiak = [0]*5
+izenak = ["Frodo", "Sam", "Merrin", "Pippin", "Bilbo"]
+logikoak = [True] * 5
+zenbakiak = [0] * 5
 
 print(izenak)
 print(zenbakiak)
@@ -563,14 +583,14 @@ print(logikoak)
 Emaitza:
 
 ```console
-[Frodo, Sam, Merrin, Pippin]
+[Frodo, Sam, Merrin, Pippin, Bilbo]
 [0, 0, 0, 0, 0]
 [True, True, True, True, True]
 ```
 
-3.1 ariketa
+3.1 Ariketa
 
-Idatzi 10 zenbakiko zerrenda bat zehazten duen programa bat. Ondoren, begizta bat sortu behar duzu,** posizio bikoitietan 0 bat sartzeko.
+Idatzi 10 zenbakiko zerrenda bat definitzen duen programa bat. Ondoren, begizta bat sortu behar duzu, posizio bikoitietan 0 bat sartzeko.
 
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -587,9 +607,9 @@ Emaitza:
 [0, 2, 0, 4, 0, 6, 0, 8, 0, 10]
 ```
 
-3.2 ariketa
+3.2 Ariketa
 
-Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu bat erakusteko: (1) elementua sartu, (2) ezabatu, (3) erakutsi eta (4) irten. Menua erabiltzaileak 4. aukera sartzen ez duen bitartean erakutsi behar da. 1. aukera aukeratuz gero, edozein balioko push egingo da, 2 aukeratuz gero, pop egingo da, eta 3 aukeratuz gero, zerrendako edukia agertuko da.
+Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen menu bat erakusteko: (1) elementua sartu, (2) ezabatu, (3) erakutsi eta (4) irten. Menua erabiltzaileak 4. aukera sartzen ez duen bitartean erakutsi behar da. 1. aukera aukeratuz gero, edozein balioko `append` egingo da, 2 aukeratuz gero, `pop` egingo da, eta 3 aukeratuz gero, zerrendako edukia erakutsiko da.
 
 ```python
 zenbakiak = []
@@ -627,7 +647,7 @@ Aukera ezazu: 3
 []
 ```
 
-3.3 ariketa
+3.3 Ariketa
 
 Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Orduan programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
 
@@ -649,14 +669,14 @@ Emaitza:
 ```console
 Idatzi hitz bat: Kaixo
 Idatzi hitz bat: zer
-Idatzi hitz bat:
-Idatzi hitz bat:
+Idatzi hitz bat: moduz?
+Idatzi hitz bat:.
 Kaixo, zer moduz?
 ```
 
 3.4 ariketa
 
-Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio horrekin guztiarekin, interpolazioa edo kate-txantiloiak erabiliz.
+Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio guztiarekin, interpolazioa edo kate txantiloiak erabiliz.
 
 ```python
 izen = input("Idatzi zure izena: ")
@@ -677,19 +697,19 @@ Idatzi zure jaioturtea: 2006
 Ada duzu izena, Tevergan jaio zinen 2006an.
 ```
 
-3.5 ariketa
+3.5 Ariketa
 
 Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du, eta, ondorioz, programak esaldi bera itzuliko du letra larriz:
 
 ```python
-frasea = input("Idatzi esaldi bat: ")
+esaldia = input("Idatzi esaldi bat: ")
 hitza = input("Idatzi esalditik hitz bat: ")
 
-posizioa = frasea.index(hitza)
+posizioa = esaldia.index(hitza)
 
 if posizioa != -1:
-    hasiera = frasea[0:posizioa]
-    bukaera = frasea[posizioa + len(hitza):len(frasea)]
+    hasiera = esaldia[0:posizioa]
+    bukaera = esaldia[posizioa + len(hitza):len(esaldia)]
     emaitza = f"{hasiera}{hitza.upper()}{bukaera}"
 
     print(emaitza)
@@ -700,12 +720,12 @@ else:
 Emaitza:
 
 ```console
-Idatzi esaldi bat: Zein ona den profa Ada
+Idatzi esaldi bat: Zein ona den Ada andereñoa
 Idatzi esaldi horretako hitz bat: ona
-Zein ona den profa Ada
+Zein ONA den profa Ada andereñoa
 ```
 
-3.6 ariketa
+3.6 Ariketa
 
 Sortu 5 izeneko zerrenda bat definitzen duen programa bat eta, ondoren, erabili begizta bat izenak banan-banan erakusteko.
 
@@ -731,9 +751,9 @@ Pip
 Bilbo
 ```
 
-3.7 ariketa
+3.7 Ariketa
 
-Sortu 10 zenbaki osoko zerrenda bat zehazten duen programa bat. Gero, beste begizta bat sortzen du, elementu bakoitza handitu eta erakusteko.
+Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Gero, beste begizta bat sortu, elementu bakoitza inkrementatu (+1) eta erakusteko.
 
 ```python
 zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
@@ -758,9 +778,9 @@ Emaitza:
 [4, 6, -3, 3, 2, 5, 1, 7, 10, 9, 4]
 ```
 
-3.8 ariketa
+3.8 Ariketa
 
-Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen zehazteko. Errepikatutako bat aurkitzea nahikoa da.
+Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen bilatzko. Errepikatutako bat aurkitzea nahikoa da.
 
 ```python
 numeruak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
@@ -788,7 +808,7 @@ Emaitza:
 Zenbaki errepikatua dago
 ```
 
-3.9 ariketa
+3.9 Ariketa
 
 Sortu 10 zenbaki osorekin hasitako zerrenda bat definituko duen programa bat. Gero, beste begizta bat sortu, zenbaki positiboak, negatiboak eta 0 direnak zenbatuko dituena.
 
@@ -820,17 +840,17 @@ Negatiboak: 2
 Zeroak: 1
 ```
 
-3.10 ariketa
+3.10 Ariketa
 
 Sortu 5x10 elementuko bi dimentsioko zerrenda bat definituko duen programa bat. Zerrendako balioak ausazko zenbakiak erabiliz hasten dituen begizta bat sortzen du.
-Zenbaki aleatorioak sortzeko, `random«eta random.randint ()» funtzioa erabiltzen du liburutegiak, hemen erakusten den bezala:
+Zenbaki aleatorioak sortzeko, `random` eta `random.randint()` funtzioa erabiltzen du liburutegiak, hemen erakusten den bezala:
 
 ```python
 import random
-random.randint (0, 30); # 0 eta 30 arteko ausazko zenbakia
+random.randint(0, 30); # 0 eta 30 arteko ausazko zenbakia
 ```
 
-Horren ondoren, sortu beste begizta bat, elementuren batean 15 zenbakia aurkituz gero begizta eten eta zer posiziotan dagoen erakutsiko duena.
+Horren ondoren, sortu beste begizta bat, elementuren batean `15` zenbakia aurkituz gero begizta eten eta zer posiziotan dagoen erakutsiko duena.
 
 ```python
 import random
@@ -849,12 +869,12 @@ print(matrizea)
 for i in range(len(matrizea)):
     for j in range(len(matrizea[i])):
         if matrizea[i][j] == 15:
-            print("15 aurkitu da ", i)
+            print("15 aurkitu da ", i, j)
 ```
 
-3.11 ariketa
+3.11 Ariketa
 
-Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen proiektu bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak aztertzen ditu, indizeetan aurreko ekitaldiko "random," metodoa erabiliz. Gero emaitza erakusten du.
+Sortu 10 zenbaki osorekin hasitako zerrenda bat definitzen duen programa bat. Begizta batean, pantaila bidez erakusten ditu elementu guztiak. Gero, beste begizta bat sortzen du, eta, bertan, elementuak lekuz aldatzen aldatzen ditu, indizeetan "random," metodoa erabiliz. Gero emaitza erakusten du.
 
 ```python
 import random
